fix: restore pre-cleanup features and MVP transition